--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "mongoose": "^6.7.5",
