--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ workflows:
       - heroku/deploy-via-git:
           filters:
             branches:
-              only: main
+              only: dev
    
 jobs:
   test:
