--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
