--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,22 @@
 version: 2.1
 orbs:
-  heroku: circleci/heroku@1.2.6
+  node: circleci/node@1.1
 workflows:
-  deploy-ussd-nodejs-app:
+  test-app:
     jobs:
-      - heroku/deploy-via-git:
-          filters:
-            branches:
-              only: dev
-   
+      - build
+        
 jobs:
-  test:
+  
+  build: 
     docker:
-      - image: cimg/node:14.17.3
-    steps:
+     - image: cimg/node:14.13.0
+    steps: 
       - checkout
       - run:
-          name: install dependiceies
-          command: npm install
-  build:
-    docker:
-      - image: cimg/node:14.13.0
-    
-    steps:
-      - checkout
-      - run:
-          name: install dependiceies
+          name: install dependencies
           command: npm install
       - run:
-          name: build
-          command: npm run build
+          name: Run test
+          command: npm test     
+ 
