--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
+    "netlify-lambda": "^2.0.15",
     "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
+    "serverless-http": "^3.1.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0",
     "ts-node": "^10.8.2"
