--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-
+.netlify
 
 # Gatsby files
 .cache/
@@ -92,7 +92,6 @@ typings/
 .vuepress/dist
 
 # Serverless directories
-.serverless/
 
 # FuseBox cache
 .fusebox/
